@@ -74,6 +74,7 @@ ether: Karen Etheridge <ether@cpan.org>
 evdb: Edmund von der Burg <evdb@ecclestoad.co.uk>
 faxm0dem: Fabien Wernli <cpan@faxm0dem.org>
 felliott: Fitz Elliott <fitz.elliott@gmail.com>
+fgabolde: Fabrice Gabolde <fgabolde@weborama.com>
 freetime: Bill Moseley <moseley@hank.org>
 frew: Arthur Axel "fREW" Schmidt <frioux@gmail.com>
 gbjk: Gareth Kirwan <gbjk@thermeon.com>
